--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -28,7 +28,7 @@
                 </ol>
                 <h3> Cursando Dev Web Full Stack...
                     Alguns cursos já concluídos e/ou em andamento:</h3>
-                <ol>
+                <ol id="ico">
                     <li class="check">Logica de programação - Senac</li>
                     <li class="load">Despertar.Dev - Web Full Stack com JavaScript, VueJs, Vuetify, PHP e Laravel -
                         Growdev (Em Andamento)</li>
