--- a/objetivos.html
+++ b/objetivos.html
@@ -18,7 +18,7 @@
                 <li><a href="objetivos.html">Objetivo</a></li>
             </ul>
         </nav>
-        <aside>
+        <aside  class="especial">
             <section id="obj">
                 <h2>OBJETIVO</h2>
                 <div id="ob1">
