--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <nav>
-            <img id="main" src="https://avatars.githubusercontent.com/u/135785532?v=4" alt="">
+            <img id="main" src="./img/135785532.jpeg" alt="">
             <ul>
                 <li><a href="index.html">Sobre</a></li>
                 <li><a href="conhecimentos.html">Conhecimentos</a></li>
