--- a/objetivos.html
+++ b/objetivos.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <nav>
-            <img id="main" src="https://avatars.githubusercontent.com/u/135785532?v=4" alt="">
+            <img id="main" src="./img/135785532.jpeg" alt="">
             <ul>
                 <li><a href="index.html">Sobre</a></li>
                 <li><a href="conhecimentos.html">Conhecimentos</a></li>
@@ -23,7 +23,7 @@
                 <h2>OBJETIVO</h2>
                 <div id="ob1">
                     <img id="ob"
-                        src="https://media.licdn.com/dms/image/D4E2DAQHGGyyJeuenoQ/profile-treasury-image-shrink_8192_8192/0/1694830390818?e=1697745600&v=beta&t=S3d1TcRpuCVKRqn3gYYTeR_n2xxA2G1J8gf7yr_deAY"
+                        src="./img/1694830390818.jpeg"
                         alt="">
                 </div>
                 <div id="ob2">
